--- a/client/src/App.css
+++ b/client/src/App.css
@@ -4,7 +4,7 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  min-height: 20vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -13,10 +13,8 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
 ul {
-  list-style: none;
+  padding-left: 0;
+  list-style-type: none;
+  list-style-position: inside;
 }
