modified header nav css

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -23,4 +23,7 @@ nav {
   display: flex;
   width: auto;
   justify-content: space-evenly;
+  min-height: 5vh;
+  margin-top: 1em;
+  margin-bottom: 1em;
 }
